--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     padding: 0px;
 }
 .header{
-background-image: url('/img/Aminul2.png'), url('./img/header_bg.png');
+background-image: url('./img/Aminul2.png'), url('./img/header_bg.png');
     background-repeat: no-repeat;
     background-position: bottom right, bottom right;
    height: 100vh;
